add lphybeast exec code